WIP added logging aspect
