# src/main/resources/baseTemplate/src/main/java/com/example/demo/aspect/LoggingAspect.java
@@ -1,0 +1,35 @@
+package /*group*/./*artifact*/.aspect;
+
+import lombok.extern.slf4j.Slf4j;
+import org.aspectj.lang.JoinPoint;
+import org.aspectj.lang.annotation.AfterReturning;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+import org.aspectj.lang.annotation.Pointcut;
+import org.jetbrains.annotations.NotNull;
+import org.springframework.stereotype.Component;
+
+import java.util.Arrays;
+
+@Aspect
+@Component
+@Slf4j
+public class LoggingAspect {
+
+  @Pointcut("execution(public * /*group*/./*artifact*/.controller..*.*(..))")
+  public void controllerPublicMethodsPointcut() {}
+
+  @Before("controllerPublicMethodsPointcut()")
+  public void logBefore(@NotNull JoinPoint joinPoint) {
+    log.info(
+        "["
+            + joinPoint.getSignature().toShortString()
+            + "] Args: "
+            + Arrays.toString(joinPoint.getArgs()));
+  }
+
+  @AfterReturning(pointcut = "controllerPublicMethodsPointcut()", returning = "result")
+  public void logAfterReturning(@NotNull JoinPoint joinPoint, Object result) {
+    log.info("[" + joinPoint.getSignature().toShortString() + "] Response: " + result);
+  }
+}
