# src/main/resources/openapi/poof.yaml
@@ -75,11 +75,19 @@ components:
       properties:
         contracts:
           $ref: '#/components/schemas/Contracts'
+        options:
+          $ref: '#/components/schemas/Options'
         projectMetadata:
           $ref: '#/components/schemas/ProjectMetadata'
       required:
         - contracts
         - projectMetadata
+      type: object
+    Options:
+      properties:
+        loggingAspect:
+          type: boolean
+          default: true
       type: object
     ProjectMetadata:
       type: object
